src/snapshots/learn_chumsky__test__binary_expressions-2.snap
---
source: src/test.rs
expression: "&snapshot"
---
Input: "lhs != rhs"

Ok(
    (
        Binary(
            (
                Ident("lhs"),
                0..3,
            ),
            Neq,
            (
                Ident("rhs"),
                7..10,
            ),
        ),
        0..10,
    ),
)
