src/snapshots/learn_chumsky__test__binary_expressions-3.snap
---
source: src/test.rs
expression: "&snapshot"
---
Input: "lhs + rhs"

Ok(
    (
        Binary(
            (
                Ident("lhs"),
                0..3,
            ),
            Add,
            (
                Ident("rhs"),
                6..9,
            ),
        ),
        0..9,
    ),
)
