src/snapshots/learn_chumsky__test__binary_expressions-4.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
lhs - rhs
---

Some(
    (
        Binary(
            (
                Ident("lhs"),
                0..3,
            ),
            Sub,
            (
                Ident("rhs"),
                6..9,
            ),
        ),
        0..9,
    ),
)

--- Errors ---
[]
---
