src/snapshots/learn_chumsky__test__binary_expressions-5.snap
---
source: src/test.rs
expression: "&snapshot"
---
---
lhs * rhs
---

Ok(
    (
        Binary(
            (
                Ident("lhs"),
                0..3,
            ),
            Mul,
            (
                Ident("rhs"),
                6..9,
            ),
        ),
        0..9,
    ),
)
