src/snapshots/learn_chumsky__test__binary_expressions-6.snap
---
source: src/test.rs
expression: "&snapshot"
---
Input: "lhs / rhs"

Ok(
    (
        Binary(
            (
                Ident("lhs"),
                0..3,
            ),
            Div,
            (
                Ident("rhs"),
                6..9,
            ),
        ),
        0..9,
    ),
)
