src/snapshots/learn_chumsky__test__binary_expressions-8.snap
---
source: src/test.rs
expression: "&snapshot"
---
Input: "1 == 1 + 2 / 3 != 0"

Ok(
    (
        Binary(
            (
                Binary(
                    (
                        Int(1),
                        0..1,
                    ),
                    Eq,
                    (
                        Binary(
                            (
                                Int(1),
                                5..6,
                            ),
                            Add,
                            (
                                Binary(
                                    (
                                        Int(2),
                                        9..10,
                                    ),
                                    Div,
                                    (
                                        Int(3),
                                        13..14,
                                    ),
                                ),
                                9..14,
                            ),
                        ),
                        5..14,
                    ),
                ),
                0..14,
            ),
            Neq,
            (
                Int(0),
                18..19,
            ),
        ),
        0..19,
    ),
)
