src/snapshots/learn_chumsky__test__binary_expressions.snap
---
source: src/test.rs
expression: "&snapshot"
---
---
lhs == rhs
---

Ok(
    (
        Binary(
            (
                Ident("lhs"),
                0..3,
            ),
            Eq,
            (
                Ident("rhs"),
                7..10,
            ),
        ),
        0..10,
    ),
)
