src/snapshots/learn_chumsky__test__block_expressions-3.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
{ }
---

Some(
    (
        Block(
            [],
        ),
        0..3,
    ),
)

--- Errors ---
[]
---
