src/snapshots/learn_chumsky__test__block_expressions.snap
---
source: src/test.rs
expression: "&snapshot"
---
---
{
	testing;
	testing;
}
---

Ok(
    (
        Block(
            [
                Expr(
                    (
                        Ident("testing"),
                        3..10,
                    ),
                ),
                Expr(
                    (
                        Ident("testing"),
                        13..20,
                    ),
                ),
            ],
        ),
        0..23,
    ),
)
